--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <p class="dessert">Cherry Pie</p><p class="price">2.75</p>
           </article>
           <article class="item">
+            
             <p class="dessert">Cheesecake</p><p class="price">3.00</p>
           </article>
           <article class="item">
@@ -55,6 +56,32 @@
         </p>
         <p class="address">123 Free Code Camp Drive</p>
       </footer>
+    </div>
+  </body>
+</html>.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Colored Markers</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <h1>CSS Color Markers</h1>
+    <div class="container">
+      <div class="marker red">
+        <div class="cap"></div>
+        <div class="sleeve"></div>
+      </div>
+      <div class="marker green">
+        <div class="cap"></div>
+        <div class="sleeve"></div>
+      </div>
+      <div class="marker blue">
+        <div class="cap"></div>
+        <div class="sleeve"></div>
+      </div>
     </div>
   </body>
 </html>
