--- a/index.html
+++ b/index.html
@@ -1,67 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <title>SPORTS ENQUIRIES</title>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Calorie Counter</title>
   </head>
   <body>
     <main>
-      <h1>Calorie Counter</h1>
-      <div class="container">
-        <form id="calorie-counter">
-          <label for="budget">Budget</label>
-          <input
-            type="number"
-            min="0"
-            id="budget"
-            placeholder="Daily calorie budget"
-            required
-          />
-          <fieldset id="breakfast">
-            <legend>Breakfast</legend>
-            <div class="input-container"></div>
-          </fieldset>
-          <fieldset id="lunch">
-            <legend>Lunch</legend>
-            <div class="input-container"></div>
-          </fieldset>
-          <fieldset id="dinner">
-            <legend>Dinner</legend>
-            <div class="input-container"></div>
-          </fieldset>
-          <fieldset id="snacks">
-            <legend>Snacks</legend>
-            <div class="input-container"></div>
-          </fieldset>
-          <fieldset id="exercise">
-            <legend>Exercise</legend>
-            <div class="input-container"></div>
-          </fieldset>
-          <div class="controls">
-            <span>
-              <label for="entry-dropdown">Add food or exercise:</label>
-              <select id="entry-dropdown" name="options">
-                <option value="breakfast" selected>Breakfast</option>
-                <option value="lunch">Lunch</option>
-                <option value="dinner">Dinner</option>
-                <option value="snacks">Snacks</option>
-                <option value="exercise">Exercise</option>
-              </select>
-              <button type="button" id="add-entry">Add Entry</button>
-            </span>
-          </div>
-          <div>
-            <button type="submit">
-              Calculate Remaining Calories
-            </button>
-            <button type="button" id="clear">Clear</button>
-          </div>
+      <section>
+      <h1>KIM LIMITED COMPANY</h1>
+      <hr>
+      <a>
+        <h2>Football Kits</h2>
+        <!-- TODO:Add link to football kits-->
+        <p>
+          Visit
+          <a target="_blank" href="https://kimlimited.com">football kits</a> 
+          for more kits.
+        </p>
+        <a href="https://kimlimited.com"><img src="https://images.footballfanatics.com/chelsea/chelsea-cup-nike-away-stadium-shirt-2023-24-womens-deivid-washington-36_ss5_p-201054906+pv-2+u-4damilpvvysisa9x6dw3+v-vfexir6kd75riviomurr.jpg?_hv=2&w=120" alt="A blue chelsea latest kit"></a>
+      </section>
+      <section>
+        <h2>Kits Sold</h2>
+        <h3><strong>Teams kits sold:</strong></h3>
+        <ul classs="list">
+          <li><i>chelsea kits</i></li>
+          <li><i>manchester city kits</i></li>
+          <li><i>manchester united</i></li>
+          <li><i>liverpool kits</i></li>
+          <li><i>arsenal kits</i></li>
+          <li><i>tottenham kits</i></li>
+        </ul>
+        <figure>
+          <img src="https://xcdn.next.co.uk/Common/Items/Default/Default/ItemImages/Search/676/C19125.jpg?im=Resize,width=350" alt="one of liverpool's kits">
+          <figcaption>liverpool<em>red</em> kit.</figcaption>
+        </figure>
+        <h3><strong>Other sold football properties:</strong></h3>
+        <ul class="list">
+          <li><i>soccer socks</i></li>
+          <li><i>soccer short</i></li>
+          <li><i>soccer boots</i></li>
+        </ul>
+        <figure>
+        <img src="https://i.ebayimg.com/images/g/5dIAAOSwewpezrxm/s-l500.jpg" alt="picture of soccer orange boots">
+        <figcaption>sample of <strong>soccer boot</strong></figcaption>
+        </figure>
+        <h2>Thankyou for shopping with us!</h2>
         </form>
-        <div id="output" class="output hide"></div>
-      </div>
+      </section>
     </main>
-    <script src="./script.js"></script>
+    <hr class="bottom-line">
+    <footer>
+      <p>
+        No Copyright - <a href="https://.visualstudiocode.com">visualstudiocode.com</a>
+      </p>
+    </footer>
   </body>
 </html>
