--- a/index.html
+++ b/index.html
@@ -1,60 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>SPORTS ENQUIRIES</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <main>
-      <section>
-      <h1>KIM LIMITED COMPANY</h1>
-      <hr>
-      <a>
-        <h2>Football Kits</h2>
-        <!-- TODO:Add link to football kits-->
-        <p>
-          Visit
-          <a target="_blank" href="https://kimlimited.com">football kits</a> 
-          for more kits.
-        </p>
-        <a href="https://kimlimited.com"><img src="https://images.footballfanatics.com/chelsea/chelsea-cup-nike-away-stadium-shirt-2023-24-womens-deivid-washington-36_ss5_p-201054906+pv-2+u-4damilpvvysisa9x6dw3+v-vfexir6kd75riviomurr.jpg?_hv=2&w=120" alt="A blue chelsea latest kit"></a>
-      </section>
-      <section>
-        <h2>Kits Sold</h2>
-        <h3><strong>Teams kits sold:</strong></h3>
-        <ul classs="list">
-          <li><i>chelsea kits</i></li>
-          <li><i>manchester city kits</i></li>
-          <li><i>manchester united</i></li>
-          <li><i>liverpool kits</i></li>
-          <li><i>arsenal kits</i></li>
-          <li><i>tottenham kits</i></li>
-        </ul>
-        <figure>
-          <img src="https://xcdn.next.co.uk/Common/Items/Default/Default/ItemImages/Search/676/C19125.jpg?im=Resize,width=350" alt="one of liverpool's kits">
-          <figcaption>liverpool<em>red</em> kit.</figcaption>
-        </figure>
-        <h3><strong>Other sold football properties:</strong></h3>
-        <ul class="list">
-          <li><i>soccer socks</i></li>
-          <li><i>soccer short</i></li>
-          <li><i>soccer boots</i></li>
-        </ul>
-        <figure>
-        <img src="https://i.ebayimg.com/images/g/5dIAAOSwewpezrxm/s-l500.jpg" alt="picture of soccer orange boots">
-        <figcaption>sample of <strong>soccer boot</strong></figcaption>
-        </figure>
-        <h2>Thankyou for shopping with us!</h2>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Learn localStorage by Building a Todo App</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <main>
+    <h1>Todo App</h1>
+    <div class="todo-app">
+      <button id="open-task-form-btn" class="btn large-btn">
+        Add New Task
+      </button>
+      <form class="task-form hidden" id="task-form">
+        <div class="task-form-header">
+          <button id="close-task-form-btn" class="close-task-form-btn" type="button" aria-label="close">
+            <svg class="close-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="48px" height="48px"><path fill="#F44336" d="M21.5 4.5H26.501V43.5H21.5z" transform="rotate(45.001 24 24)" /><path fill="#F44336" d="M21.5 4.5H26.5V43.501H21.5z" transform="rotate(135.008 24 24)" /></svg>
+          </button>
+        </div>
+        <div class="task-form-body">
+          <label class="task-form-label" for="title-input">Title</label>
+          <input required type="text" class="form-control" id="title-input" value="" />
+          <label class="task-form-label" for="date-input">Date</label>
+          <input type="date" class="form-control" id="date-input" value="" />
+          <label class="task-form-label" for="description-input">Description</label>
+          <textarea class="form-control" id="description-input" cols="30" rows="5"></textarea>
+        </div>
+        <div class="task-form-footer">
+          <button id="add-or-update-task-btn" class="btn large-btn" type="submit">
+            Add Task
+          </button>
+        </div>
+      </form>
+      <dialog id="confirm-close-dialog">
+        <form method="dialog">
+          <p class="discard-message-text">Discard unsaved changes?</p>
+          <div class="confirm-close-dialog-btn-container">
+            <button id="cancel-btn" class="btn">
+              Cancel
+            </button>
+            <button id="discard-btn" class="btn">
+              Discard
+            </button>
+          </div>
         </form>
-      </section>
-    </main>
-    <hr class="bottom-line">
-    <footer>
-      <p>
-        No Copyright - <a href="https://.visualstudiocode.com">visualstudiocode.com</a>
-      </p>
-    </footer>
-  </body>
+      </dialog>
+      <div id="tasks-container"></div>
+    </div>
+  </main>
+  <script src="script.js"></script>
+</body>
+
 </html>
