--- a/login.html
+++ b/login.html
@@ -7,22 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main type="logins">
-      <h1>Kim logins</h1>
-      <p>These are kim's logins:</p>
-      <div>
-        <label for="name">Enter name:</label>
-        <input
-          type="text"
-          id="user-Name"
-          name="first name"
-          placeholder="first Name"
-        />
-      </div>
-      <div>
-        <label for="email">Enter email:</label>
-        <input type="email" id="user-Email" name="Email" placeholder="email" />
-      </div>
-    </main>
+    <form class="box" action="Hello.html" method="post">
+      <h1>kim's logins</h1>
+      <input type="text" name="" placeholder="username" />
+      <input type="password" name="" placeholder="password" />
+      <input type="submit" name="" value="Login" />
+    </form>
   </body>
 </html>
