--- a/index.html
+++ b/index.html
@@ -1,58 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Learn localStorage by Building a Todo App</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-
-<body>
-  <main>
-    <h1>Todo App</h1>
-    <div class="todo-app">
-      <button id="open-task-form-btn" class="btn large-btn">
-        Add New Task
-      </button>
-      <form class="task-form hidden" id="task-form">
-        <div class="task-form-header">
-          <button id="close-task-form-btn" class="close-task-form-btn" type="button" aria-label="close">
-            <svg class="close-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="48px" height="48px"><path fill="#F44336" d="M21.5 4.5H26.501V43.5H21.5z" transform="rotate(45.001 24 24)" /><path fill="#F44336" d="M21.5 4.5H26.5V43.501H21.5z" transform="rotate(135.008 24 24)" /></svg>
-          </button>
-        </div>
-        <div class="task-form-body">
-          <label class="task-form-label" for="title-input">Title</label>
-          <input required type="text" class="form-control" id="title-input" value="" />
-          <label class="task-form-label" for="date-input">Date</label>
-          <input type="date" class="form-control" id="date-input" value="" />
-          <label class="task-form-label" for="description-input">Description</label>
-          <textarea class="form-control" id="description-input" cols="30" rows="5"></textarea>
-        </div>
-        <div class="task-form-footer">
-          <button id="add-or-update-task-btn" class="btn large-btn" type="submit">
-            Add Task
-          </button>
-        </div>
-      </form>
-      <dialog id="confirm-close-dialog">
-        <form method="dialog">
-          <p class="discard-message-text">Discard unsaved changes?</p>
-          <div class="confirm-close-dialog-btn-container">
-            <button id="cancel-btn" class="btn">
-              Cancel
-            </button>
-            <button id="discard-btn" class="btn">
-              Discard
-            </button>
-          </div>
-        </form>
-      </dialog>
-      <div id="tasks-container"></div>
+  <head>
+    <title>LIMITED COMPANY</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="football enquiries">
+      <main>
+        <h1>KIM LIMITED COMPANY</h1>
+        <p class="established">Est.2025</p>
+        <hr />
+        <h2>football enquiries:</h2>
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNQTvJtltP03eJMu9W9ufiSiz3600H-UYywEqQi0QxoQ&s"
+          alt-="football kit icon"
+        />
+        <article class="item">
+          <p class="kit">Football Jersy</p>
+          <p class="price">$20</p>
+        </article>
+        <article class="item">
+          <p class="boots">Addidas Boots</p>
+          <p class="price">$30</p>
+        </article>
+        <article class="item">
+          <p class="First aid kits">First Aid Kit</p>
+          <p class="price">$35</p>
+        </article>
+        <article class="item">
+          <p class="football Nets">Strong Fibric Nets</p>
+          <p class="price">$36</p>
+        </article>
+        <article class="item">
+          <p class="soccer balls">Soccer Ball Mikasa Model</p>
+          <p class="price">$35</p>
+        </article>
+      </main>
+      <hr class="bottom-line" />
+      <footer>
+        <p>
+          <a href="https://www.kimlimited.com" target="_blank"
+            >Visit our Website</a
+          >
+        </p>
+        <p class="address">123 kim sports choice</p>
+      </footer>
     </div>
-  </main>
-  <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
