--- a/index.html
+++ b/index.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Barber shop</title>
-  <link rel="stylesheet" href="styles.css"/>
-<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
-  <section id="banner">
-   <img src="https://st2.depositphotos.com/1832477/12094/i/450/depositphotos_120942606-stock-photo-vintage-barber-shop-logos-labels.jpg" class="logo"/>
-   <div class="banner-text">
-      <h1>Kim's Hair Studio</h1>
-      <p>`Style your hair,Style your life`</p>
-  <div class="banner-btn">
-      <a href="#"><span></span>Find Out</a>
-      <a href="#"><span></span>Read More</a>
-    </div>
-   </div>
-  </section>
-  <div id="sideNav">
-    <nav>
-      <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">FEATURES</a></li>
-          <li><a href="#">SERVICES</a></li>
-          <li><a href="#">FEEDBACKS</a></li>
-          <li><a href="#">MEET US</a></li>
-      </ul>
-    </nav>
-  </div>
-  <div id="menuBtn">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMhZd3GLyf0RC-LujO6OEwcGOi1k5USBOwWfc4e2tbqVV5GAD2zBwq4VcXVjKheGsw6Kk&usqp=CAU" id="menu"/>
-  </div>
-<script>
-  var menuBtn = document.getElementById("menuBtn")
-  var sideNav = document.getElementById("sideNav")
-  var menu = document.getElementById("menu")
 
-  menuBtn.onclick = function() {
-    if(sideNav.style.right == "-250px"){
-      sideNav.style.right = "0";
-    }
-    else{
-      sideNav.style.right = "-250px";
-    }
-  }
-</script>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Learn localStorage by Building a Todo App</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <main>
+    <h1>Todo App</h1>
+    <div class="todo-app">
+      <button id="open-task-form-btn" class="btn large-btn">
+        Add New Task
+      </button>
+      <form class="task-form hidden" id="task-form">
+        <div class="task-form-header">
+          <button id="close-task-form-btn" class="close-task-form-btn" type="button" aria-label="close">
+            <svg class="close-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="48px" height="48px"><path fill="#F44336" d="M21.5 4.5H26.501V43.5H21.5z" transform="rotate(45.001 24 24)" /><path fill="#F44336" d="M21.5 4.5H26.5V43.501H21.5z" transform="rotate(135.008 24 24)" /></svg>
+          </button>
+        </div>
+        <div class="task-form-body">
+          <label class="task-form-label" for="title-input">Title</label>
+          <input required type="text" class="form-control" id="title-input" value="" />
+          <label class="task-form-label" for="date-input">Date</label>
+          <input type="date" class="form-control" id="date-input" value="" />
+          <label class="task-form-label" for="description-input">Description</label>
+          <textarea class="form-control" id="description-input" cols="30" rows="5"></textarea>
+        </div>
+        <div class="task-form-footer">
+          <button id="add-or-update-task-btn" class="btn large-btn" type="submit">
+            Add Task
+          </button>
+        </div>
+      </form>
+      <dialog id="confirm-close-dialog">
+        <form method="dialog">
+          <p class="discard-message-text">Discard unsaved changes?</p>
+          <div class="confirm-close-dialog-btn-container">
+            <button id="cancel-btn" class="btn">
+              Cancel
+            </button>
+            <button id="discard-btn" class="btn">
+              Discard
+            </button>
+          </div>
+        </form>
+      </dialog>
+      <div id="tasks-container"></div>
+    </div>
+  </main>
+  <script src="script.js"></script>
 </body>
+
 </html>
