--- a/index.html
+++ b/index.html
@@ -73,18 +73,38 @@
          <div class="single-service">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKKnSOesU-y7gltxfkN2tTMkiSfS9CWleDTGXuj7ezxg&s">
                <div class="overlay"></div>
+               <div class="service-desc">
+                <h3>Hair line cutting</h3>
+                <hr>
+                <p>this is test under description of barber foundation</p>
+               </div>
          </div>
            <div class="single-service">
               <img src="https://media.istockphoto.com/id/1677718095/photo/young-man-having-a-haircut-at-barber-shop.webp?b=1&s=170667a&w=0&k=20&c=OLUyr_osPcmXMOfGmNmTfmq48vfV2oj3wH8IurBYR9c=">
                 <div class="overlay"></div>
+                <div class="service-desc">
+                <h3>Hair combing & Trimming</h3>
+                <hr>
+                <p>this is test under description of barber foundation</p>
+               </div>
            </div>
              <div class="single-service">
                 <img src="https://img.freepik.com/premium-photo/close-up-view-young-bearded-man-that-sitting-getting-haircut-barber-shop_146671-40437.jpg">
                   <div class="overlay"></div>
+                  <div class="service-desc">
+                <h3>Hair Trimming</h3>
+                <hr>
+                <p>this is test under description of barber foundation</p>
+               </div>
              </div>
                <div class="single-service">
                   <img src="https://img.freepik.com/free-photo/handsome-man-barber-shop-styling-hair_1303-20978.jpg?size=626&ext=jpg&ga=GA1.1.553209589.1713312000&semt=ais">
                       <div class="overlay"></div>
+                      <div class="service-desc">
+                <h3>Hair Blow & Drying</h3>
+                <hr>
+                <p>this is test under description of barber foundation</p>
+               </div>
                </div>
         </div>
       </section>
