--- a/index.html
+++ b/index.html
@@ -1,127 +1,168 @@
 <html>
-    <head>
-        <title>Barber Shop</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/CSS/font-awesome.min.CSS">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-     <section id="banner">
-        <img src="https://e7.pngegg.com/pngimages/629/114/png-clipart-black-barbershop-calligraphy-illustration-sticker-barbershop-wall-decal-salon-glass-text-thumbnail.png" class="logo">
-        <div class="banner-text">
-            <h1>Kim Ltd Hair Studio</h1>
-            <p>Style your Hair,Style your Life</p>
-            <div class="banner-btn">
-                <a href="#"><span></span>Find Out</a>
-                <a href="#"><span></span>Read More</a>
-            </div>
+  <head>
+    <title>Barber Shop</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/CSS/font-awesome.min.CSS"
+    />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <section id="banner">
+      <img
+        src="https://e7.pngegg.com/pngimages/629/114/png-clipart-black-barbershop-calligraphy-illustration-sticker-barbershop-wall-decal-salon-glass-text-thumbnail.png"
+        class="logo"
+      />
+      <div class="banner-text">
+        <h1>Kim Ltd Hair Studio</h1>
+        <p>Style your Hair,Style your Life</p>
+        <div class="banner-btn">
+          <a href="#"><span></span>Find Out</a>
+          <a href="#"><span></span>Read More</a>
         </div>
-     </section>
-     <div id="sideNav">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                 <li><a href="#">Features</a></li>
-                  <li><a href="#">Services</a></li>
-                   <li><a href="#">Feedbacks</a></li>
-                    <li><a href="#">Meet us</a></li>
-            </ul>
-        </nav>
-     </div>
-     <div id="menuBtn">
-        <img src="https://cdn4.vectorstock.com/i/1000x1000/05/73/menu-button-icon-design-vector-22050573.jpg" id="menu">
-     </div>
+      </div>
+    </section>
+    <div id="sideNav">
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Feedbacks</a></li>
+          <li><a href="#">Meet us</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div id="menuBtn">
+      <img
+        src="https://cdn4.vectorstock.com/i/1000x1000/05/73/menu-button-icon-design-vector-22050573.jpg"
+        id="menu"
+      />
+    </div>
 
     <section id="feature">
-       <div class="title-text">
-         <p>FEATURES</p>
-         <h1>Why Choose Us</h1>
-       </div>
-       <div class="feature-box">
-         <div class="features">
-           <h1>Experienced Staff</h1>
-           <div class="features-desc">
+      <div class="title-text">
+        <p>FEATURES</p>
+        <h1>Why Choose Us</h1>
+      </div>
+      <div class="feature-box">
+        <div class="features">
+          <div>
+            <h1>Experienced Staff</h1>
+            <div class="features-desc">
               <div class="feture-text">
-                <p>"Step into our studio and experience the artistry of our seasoned professionals. Our experienced staff brings passion, creativity, and expertise to every hair journey, ensuring you leave feeling confident and beautiful."</p>
+                <p>
+                  "Step into our studio and experience the artistry of our
+                  seasoned professionals. Our experienced staff brings passion,
+                  creativity, and expertise to every hair journey, ensuring you
+                  leave feeling confident and beautiful."
+                </p>
               </div>
-           </div>
+            </div>
+          </div>
+          <div>
             <h1>Pre Booking Online</h1>
-           <div class="features-desc">
+            <div class="features-desc">
               <div class="feture-text">
-                <p>""Ready for a new look? Pre-book your hair appointment online today at [KIM LTD HAIR STUDIO]! Choose your preferred date and time for a seamless experience. See you soon!""</p>
+                <p>
+                  ""Ready for a new look? Pre-book your hair appointment online
+                  today at [KIM LTD HAIR STUDIO]! Choose your preferred date and
+                  time for a seamless experience. See you soon!""
+                </p>
               </div>
-           </div>
+            </div>
+          </div>
+          <div>
             <h1>Affordable Cost</h1>
-           <div class="features-desc">
+            <div class="features-desc">
               <div class="feture-text">
-                <p>""Get the perfect look without breaking the bank! Affordable rates at [KIM LTD HAIR STUDIO]. Book now for a budget-friendly makeover!""</p>
+                <p>
+                  ""Get the perfect look without breaking the bank! Affordable
+                  rates at [KIM LTD HAIR STUDIO]. Book now for a budget-friendly
+                  makeover!""
+                </p>
               </div>
-           </div>
-         </div>
-         <div class="features-img">
-              <img src="https://www.shutterstock.com/image-photo/barber-making-hairstyle-confident-bearded-600nw-1975664201.jpg">
-         </div>
-       </div>
-    </section>
-      <section id="service">
-        <div class="title-text">
-         <p>SERVICES</p>
-         <h1>We Provide Better</h1>
-       </div>
-       <div class="service-box">
-         <div class="single-service">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKKnSOesU-y7gltxfkN2tTMkiSfS9CWleDTGXuj7ezxg&s">
-               <div class="overlay"></div>
-               <div class="service-desc">
-                <h3>Hair line cutting</h3>
-                <hr>
-                <p>this is test under description of barber foundation</p>
-               </div>
-         </div>
-           <div class="single-service">
-              <img src="https://media.istockphoto.com/id/1677718095/photo/young-man-having-a-haircut-at-barber-shop.webp?b=1&s=170667a&w=0&k=20&c=OLUyr_osPcmXMOfGmNmTfmq48vfV2oj3wH8IurBYR9c=">
-                <div class="overlay"></div>
-                <div class="service-desc">
-                <h3>Hair combing & Trimming</h3>
-                <hr>
-                <p>this is test under description of barber foundation</p>
-               </div>
-           </div>
-             <div class="single-service">
-                <img src="https://img.freepik.com/premium-photo/close-up-view-young-bearded-man-that-sitting-getting-haircut-barber-shop_146671-40437.jpg">
-                  <div class="overlay"></div>
-                  <div class="service-desc">
-                <h3>Hair Trimming</h3>
-                <hr>
-                <p>this is test under description of barber foundation</p>
-               </div>
-             </div>
-               <div class="single-service">
-                  <img src="https://img.freepik.com/free-photo/handsome-man-barber-shop-styling-hair_1303-20978.jpg?size=626&ext=jpg&ga=GA1.1.553209589.1713312000&semt=ais">
-                      <div class="overlay"></div>
-                      <div class="service-desc">
-                <h3>Hair Blow & Drying</h3>
-                <hr>
-                <p>this is test under description of barber foundation</p>
-               </div>
-               </div>
+            </div>
+          </div>
         </div>
-      </section>
-<script>
-    var menuBtn = document.getElementById("menuBtn")
-    var sideNav = document.getElementById("sideNav")
-    var menu    = document.getElementById("menu")
+        <div class="features-img">
+          <img
+            src="https://www.shutterstock.com/image-photo/barber-making-hairstyle-confident-bearded-600nw-1975664201.jpg"
+          />
+        </div>
+      </div>
+    </section>
+    <section id="service">
+      <div class="title-text">
+        <p>SERVICES</p>
+        <h1>We Provide Better</h1>
+      </div>
+      <div class="service-box">
+        <div class="single-service">
+          <img
+            src="https://media.istockphoto.com/id/1677718095/photo/young-man-having-a-haircut-at-barber-shop.webp?b=1&s=170667a&w=0&k=20&c=OLUyr_osPcmXMOfGmNmTfmq48vfV2oj3wH8IurBYR9c="
+          />
+          <div class="overlay"></div>
+          <div class="service-desc">
+            <h3>Hair combing & Trimming</h3>
+            <hr />
+            <p>this is test under description of barber foundation</p>
+          </div>
+        </div>
+        <div class="single-service">
+          <img
+            src="https://img.freepik.com/premium-photo/close-up-view-young-bearded-man-that-sitting-getting-haircut-barber-shop_146671-40437.jpg"
+          />
+          <div class="overlay"></div>
+          <div class="service-desc">
+            <h3>Hair Trimming</h3>
+            <hr />
+            <p>this is test under description of barber foundation</p>
+          </div>
+        </div>
+        <div class="single-service">
+          <img
+            src="https://img.freepik.com/free-photo/handsome-man-barber-shop-styling-hair_1303-20978.jpg?size=626&ext=jpg&ga=GA1.1.553209589.1713312000&semt=ais"
+          />
+          <div class="overlay"></div>
+          <div class="service-desc">
+            <h3>Hair Blow & Drying</h3>
+            <hr />
+            <p>this is test under description of barber foundation</p>
+          </div>
+        </div>
+        <div class="single-service">
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKKnSOesU-y7gltxfkN2tTMkiSfS9CWleDTGXuj7ezxg&s"
+          />
+          <div class="overlay"></div>
+          <div class="service-desc">
+            <h3>Hair line cutting</h3>
+            <hr />
+            <p>this is test under description of barber foundation</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script>
+      var menuBtn = document.getElementById("menuBtn");
+      var sideNav = document.getElementById("sideNav");
+      var menu = document.getElementById("menu");
 
-    sideNav.style.right = "-250px"
+      sideNav.style.right = "-250px";
 
-    menuBtn.onclick = function(){
-        if(sideNav.style.right == "-250px"){
-            sideNav.style.right = "0";
-        }else{
-            sideNav.style.right = "-250px";
+      menuBtn.onclick = function () {
+        if (sideNav.style.right == "-250px") {
+          sideNav.style.right = "0";
+        } else {
+          sideNav.style.right = "-250px";
         }
-    }
-</script>
-    </body>
+      };
+    </script>
+  </body>
 </html>
