--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
         <div class="footer-right">
           <h1>Get In Touch</h1>
-          <p>Location: Nairobi,Kenya City</p>
+          <p>Location: Nairobi,Kenya</p>
           <p>Email: mutindadouglas0@website.com</p>
           <p>Contact: +254 112145707</p>
         </div>
