--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Barber Shop</title>
+        <title>Website sample</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/CSS/font-awesome.min.CSS">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
