--- a/firstweb.html
+++ b/firstweb.html
@@ -1,10 +1,11 @@
 <html>
     <head>
-        <title>Website sample</title>
+        <title>Barber Shop</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/CSS/font-awesome.min.CSS">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="path/to/your/css/styles.css">
         <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
     </head>
     <body>
@@ -157,6 +158,12 @@
           <h1>Opening Hours</h1>
           <p>Monday to Friday - 8am to 8pm</p>
           <p>Saturday and Sunday - 8am to 11pm</p>
+
+          <div class="social-links">
+             <a href="https://www.facebook.com/yourpage" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook"></a>
+             <a href="https://www.linkedin.com/in/douglas-kyalo-384ab0238/" target="_blank"><img src="https://cdn.icon-icons.com/icons2/2428/PNG/512/linkedin_black_logo_icon_147114.png" alt="Linkedin"></a>
+             <a href="https://www.instagram.com/yourpage" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
+         </div>
         </div>
         <div class="footer-right">
           <h1>Get In Touch</h1>
@@ -164,9 +171,6 @@
           <p>Email: mutindadouglas0@website.com</p>
           <p>Contact: +254 112145707</p>
         </div>
-       </div>
-       <div class="social-links">
-         
        </div>
       </section>
 <script>
