--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <div class="social-links">
              <a href="https://www.facebook.com/yourpage" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook"></a>
              <a href="https://www.linkedin.com/in/douglas-kyalo-384ab0238/" target="_blank"><img src="https://cdn.icon-icons.com/icons2/2428/PNG/512/linkedin_black_logo_icon_147114.png" alt="Linkedin"></a>
-             <a href="https://www.instagram.com/yourpage" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
+             <a href="https://www.instagram.com/https://www.instagram.com/kyalo7965/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
          </div>
         </div>
         <div class="footer-right">
