--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--start of project1-->
 <html>
     <head>
         <title>Barber Shop</title>
@@ -196,13 +197,17 @@
 </script>
     </body>
 	     </html>
+<!--END of project1-->
 
-
-<!--END-->
-
-
-<!--project2 below-->
 		     
+
+
+
+
+
+
+		     
+<!--start of project2-->	     
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -230,4 +235,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+<!--end of project2-->
 	
