--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--start of project1-->
 <html>
     <head>
-        <title>Barber Shop</title>
+        <title>Website Dev</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/CSS/font-awesome.min.CSS">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -11,10 +11,10 @@
     </head>
     <body>
      <section id="banner">
-        <img src="https://e7.pngegg.com/pngimages/629/114/png-clipart-black-barbershop-calligraphy-illustration-sticker-barbershop-wall-decal-salon-glass-text-thumbnail.png" class="logo">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPEh-4-vgoZPHFlmuBAdGz35DMmVNF7H4-Ow&usqp=CAU" class="logo">
         <div class="banner-text">
-            <h1>Kim Ltd Hair Studio</h1>
-            <p>Style your Hair,Style your Life</p>
+            <h1>Kim Website Dev Solution</h1>
+            <p>Develop your website,develop your world</p>
             <div class="banner-btn">
                 <a href="#"><span></span>Find Out</a>
                 <a href="#"><span></span>Read More</a>
@@ -33,80 +33,80 @@
         </nav>
      </div>
      <div id="menuBtn">
-        <img src="https://cdn4.vectorstock.com/i/1000x1000/05/73/menu-button-icon-design-vector-22050573.jpg" id="menu">
+        <img src="https://icon-library.com/images/menu-icon-button/menu-icon-button-16.jpg" id="menu">
      </div>
 
     <section id="feature">
        <div class="title-text">
          <p>FEATURES</p>
-         <h1>Why Choose Us</h1>
+         <h1>This is Why you should Consider Hiring Us.</h1>
        </div>
        <div class="feature-box">
          <div class="features">
-           <h1>Experienced Staff</h1>
+           <h1>Experienced Web Developers</h1>
            <div class="features-desc">
               <div class="feture-text">
-                <p>"Step into our studio and experience the artistry of our seasoned professionals. Our experienced staff brings passion, creativity, and expertise to every hair journey, ensuring you leave feeling confident and beautiful."</p>
+                <p>"Step into our site and experience the best of our  professionals. Our experienced personnels brings passion, creativity, and expertise to everyservice, ensuring you get great experience for any service ."</p>
               </div>
            </div>
-            <h1>Pre Booking Online</h1>
+            <h1>Hire Us Now</h1>
            <div class="features-desc">
               <div class="feture-text">
-                <p>""Ready for a new look? Pre-book your hair appointment online today at [KIM LTD HAIR STUDIO]! Choose your preferred date and time for a seamless experience. See you soon!""</p>
+                <p>""Ready for great looking website & designs hire us now @ [KIM WEBSITE DEV SOLUTION ]! Choose your preferred service for a seamless experience!""</p>
               </div>
            </div>
-            <h1>Affordable Cost</h1>
+            <h1>Affordable Costs</h1>
            <div class="features-desc">
               <div class="feture-text">
-                <p>""Get the perfect look without breaking the bank! Affordable rates at [KIM LTD HAIR STUDIO]. Book now for a budget-friendly makeover!""</p>
+                <p>""Get the perfect,impressive & commendable website development,website designs & consultancy without breaking the bank! Affordable rates at [KIM WEBSITE DEV SOLUTION]. Hire us now for a budget-friendly services!""</p>
               </div>
            </div>
          </div>
          <div class="features-img">
-              <img src="https://www.shutterstock.com/image-photo/barber-making-hairstyle-confident-bearded-600nw-1975664201.jpg">
+              <img src="https://t3.ftcdn.net/jpg/06/05/01/16/360_F_605011629_ATYjTI7TDvCLAQoO1TSGIkC6WziV0Yxa.jpg">
          </div>
        </div>
     </section>
       <section id="service">
         <div class="title-text">
          <p>SERVICES</p>
-         <h1>We Provide Better</h1>
+         <h1>We Deliver & give Best.</h1>
        </div>
        <div class="service-box">
          <div class="single-service">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKKnSOesU-y7gltxfkN2tTMkiSfS9CWleDTGXuj7ezxg&s">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwOzfH-y9rTLYNarMXiMGJAcXKa5eMOyIuks6tJ8c9MypNyJFau0ME3ZzE1clThgAh3nY&usqp=CAU">
                <div class="overlay"></div>
                <div class="service-desc">
-                <h3>Hair line cutting</h3>
+                <h3>Best Website dev,Consultancy & Designs solutions</h3>
                 <hr>
-                <p>this is test under description of barber foundation</p>
+                <p>this is test under description of website foundation</p>
                </div>
          </div>
            <div class="single-service">
-              <img src="https://media.istockphoto.com/id/1677718095/photo/young-man-having-a-haircut-at-barber-shop.webp?b=1&s=170667a&w=0&k=20&c=OLUyr_osPcmXMOfGmNmTfmq48vfV2oj3wH8IurBYR9c=">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAqQBsJPhBQU_wv9cXPo-4j_J5ptv-XfdqQ7sr9UhvK7gs_SOWw-B1uUwP1dl09wpAzMs&usqp=CAU">
                 <div class="overlay"></div>
                 <div class="service-desc">
-                <h3>Hair combing & Trimming</h3>
+                <h3>Best Website dev,Consultancy & Designs solutions</h3>
                 <hr>
-                <p>this is test under description of barber foundation</p>
+                <p>this is test under description of website foundation</p>
                </div>
            </div>
              <div class="single-service">
-                <img src="https://img.freepik.com/premium-photo/close-up-view-young-bearded-man-that-sitting-getting-haircut-barber-shop_146671-40437.jpg">
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/038/963/639/small_2x/ai-generated-male-hand-using-computer-keyboard-to-search-information-using-search-bar-function-on-your-website-search-engine-optimization-photo.jpg">
                   <div class="overlay"></div>
                   <div class="service-desc">
-                <h3>Hair Trimming</h3>
+                <h3>Best Website dev,Consultancy & Designs solutions</h3>
                 <hr>
-                <p>this is test under description of barber foundation</p>
+                <p>this is test under description of website foundation</p>
                </div>
              </div>
                <div class="single-service">
-                  <img src="https://img.freepik.com/free-photo/handsome-man-barber-shop-styling-hair_1303-20978.jpg?size=626&ext=jpg&ga=GA1.1.553209589.1713312000&semt=ais">
+                  <img src="https://static.vecteezy.com/system/resources/previews/008/612/703/non_2x/html-code-on-computer-monitor-software-web-developer-programming-code-photo.jpg">
                       <div class="overlay"></div>
                       <div class="service-desc">
-                <h3>Hair Blow & Drying</h3>
+                <h3>Best Website dev,Consultancy & Designs solutions</h3>
                 <hr>
-                <p>this is test under description of barber foundation</p>
+                <p>this is test under description of website foundation</p>
                </div>
                </div>
         </div>
@@ -114,7 +114,7 @@
       <section id="feedbacks">
          <div class="title-text">
          <p>FEEDBACK</p>
-         <h1>What Client Says</h1>
+         <h1>What Clients Say.</h1>
        </div>
        <div class="feedback-row">
          <div class="feedback-col">
@@ -125,7 +125,7 @@
               <small>@douglaskyalo</small>
              </div>
           </div>
-            <p>"Absolutely loved my experience at [KIM LTD HAIR STUDIO]! The stylist was so skilled and friendly. My haircut turned out exactly how I wanted it. Can't wait to come back for my next appointment!"</p>
+            <p>"The service i got  @ [KIM WEBSITE DEV SOLUTION]! The design and development for my website was really impressing. I recomend you to have your experience on the same & you will really like it1!.</p>
          </div>
          <div class="feedback-col">
           <div class="user">
@@ -135,7 +135,7 @@
              <small>@macariocatarina</small>
             </div>
           </div>
-           <p>"Absolutely loved my experience at [KIM LTD HAIR STUDIO]! The stylist was so skilled and friendly."</p>
+           <p>"I loved what they delivered to me @ [KIM WEBSITE DEV SOLUTION]! The design was so skilled."</p>
          </div>
          <div class="feedback-col">
           <div class="user">
@@ -144,21 +144,18 @@
               <h4>KIM DASHIAN</h4>
               <small>@kimdashian</small>
              </div>
-            <p>"Absolutely loved my experience at [KIM LTD HAIR STUDIO]! The stylist was so skilled and friendly. My haircut turned out exactly how I wanted it. Can't wait to come back for my next appointment!"</p>
+            <p>"Absolutely loved my experience @ [KIM WEBSITE DEV SOLUTION]! The design and development was so commendable. My website turned out exactly how I wanted it to be."</p>
          </div>
        </div>
       </section>
       <section id="footer">
-        <img src="https://saloncloudsplus.com/uploads/13.png" class="footer-img">
+        <img src="https://media.licdn.com/dms/image/C4E12AQGwsjMmeoEX8Q/article-cover_image-shrink_720_1280/0/1520084335099?e=2147483647&v=beta&t=9v4uVbncLGSWtSuYpc-c_YerQvpu6PuJp7bkTkcGwpQ" class="footer-img">
          <div class="title-text">
          <p>CONTACT</p>
-         <h1>Visit Shop Today</h1>
+         <h1>Hire Us Today...</h1>
        </div>
        <div class="footer-row">
         <div class="footer-left">
-          <h1>Opening Hours</h1>
-          <p>Monday to Friday - 8am to 8pm</p>
-          <p>Saturday and Sunday - 8am to 11pm</p>
 
           <div class="social-links">
              <a href="https://www.facebook.com/profile.php?id=61558661438602" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook"></a>
@@ -169,8 +166,9 @@
         </div>
         <div class="footer-right">
           <h1>Get In Touch</h1>
+          <p>Website: </p>
           <p>Location: Nairobi,Kenya</p>
-          <p>Email: mutindadouglas0@website.com</p>
+          <p>Email: mutindadouglas0@gmail.com</p>
           <p>Contact: +254 112145707</p>
         </div>
        </div>
