--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="visiting-card" id="visitingCard">
         <div class="logo" id="logo"></div>
-        <div class="company-name">Your Company Name</div>
-        <div class="position">Your Position</div>
-        <div class="contact-info">+1 (123) 456-7890</div>
-        <div class="address">123 Main St, City, Country</div>
-        <div class="website">www.yourwebsite.com</div>
+        <div class="company-name">BULBUL ENTERPRISE</div>
+        <div class="position">Md.Tabassinur Rahman Bulbul</div>
+        <div class="contact-info">mobile:01990-380704,01910-210340,T&T:02-222222160</div>
+        <div class="address">Green View(3rd Floor),50/3,Santinagar,Dhaka-1217</div>
+        <div class="email">tabassin12@gmail.com</div>
     </div>
     <button onclick="saveAsImage()">Save as PNG</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
